# bye-winhttp

./: CMakeLists.txt  README.md
src/: dllmain.c  macros.h  winhttp.c
